Add styles to search component

--- a/components/search/autocomplete/search.html
+++ b/components/search/autocomplete/search.html
@@ -8,6 +8,7 @@
 <body>
 
 <div id="search1" class="autocomplete">
+    <h1 class="title">Search</h1>
     <input class="searchQuery" type="text" placeholder="Person name">
     <div class="suggestions">
     </div>
