--- a/components/search/autocomplete/styles.css
+++ b/components/search/autocomplete/styles.css
@@ -1,12 +1,19 @@
 .autocomplete {
     display: block;
-    position: absolute;
     background-color: white;
-    z-index: 1;
 }
 
 .suggestions {
     display: none;
+    width: 100%;
+    border: 1px solid #99989a;
+    background-color: white;
+}
+
+.autocomplete .searchQuery {
+    width: 100%;
+    height: 2em;
+    border: 1px solid #99989a;
 }
 
 .autocomplete a {
@@ -15,6 +22,25 @@
     color: black;
 }
 
+.autocomplete .title {
+    font-size: 3em;
+    font-family: "Book Antiqua";
+    text-align: center;
+    color: darkslategrey;
+}
+
 .show {
     display: block;
+}
+
+#search1 {
+    width: 30%;
+    position: absolute;
+    left: 35%;
+    top: 30%;
+    background-color: inherit;
+}
+
+body {
+    background-color: beige;
 }
